--- a/src/analysis/sandbox/eda/eda_february.Rmd
+++ b/src/analysis/sandbox/eda/eda_february.Rmd
@@ -21,6 +21,7 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE, out.width = "100%")
 
 *Last updated `r Sys.time()`*
 
+<br>  
 
 # Introduction
 
@@ -47,6 +48,7 @@ _Coverage relative to SDWIS master list of active, community water systems_
 - [ ] Summary of existing boundary coverage by tribal vs non-tribal (i.e. primacy_type_code is territory?)
 - [ ] Total US population served by existing boundary date (using SDWIS provided `population_served`)
 
+<br>  
 
 # Missingness
 
@@ -56,6 +58,7 @@ We examine missingness of key datasets in terms of:
 - **Centroid coverage.** For unlabeled data, we must estimate a boundary, and the model we will develop will estimate the radius of a water system boundary from a centroid. Thus we need spatial centroids for unlabeled data. Sometimes thee centroids are provided, sometimes not. We assess their coverage nationwide.  
 - **Tabular data missingness.** Tabular data is non-spatial data associated with water systems (e.g., population served, system size) that can be used to predict water system radii. Missingness in these columns may limit the extensibility of modeling and is thus characterized.  
 
+<br>  
 
 ## Existing coverage of spatial labeled data
 
@@ -139,8 +142,14 @@ states_df %>%
 
 > **RECCOMENDATION:** we should collect as many upstream labeled data sources from missing states which will increase the completeness of the overall labeled dataset and improve predicted boundaries.  
 
+<br>  
 
 ## Centroid coverage
+
+
+<br>  
+
+### Centroid coverage at all PWSIDs
 
 Preliminary investigation of ECHO and FRS datasets showed that ECHO contained more centroid data, thus ECHO centroid coverage is assessed. As stated before, in this analysis we only focus on CWS. 
 
@@ -151,7 +160,7 @@ j <- read_csv(path(staging_path, "matched_output.csv"), col_select = -1)
 
 First, `r round((nrow(filter(j, is.na(echo_latitude) | is.na(echo_longitude))) / nrow(j))*100, 2)`% of pwsids (`r nrow(filter(j, is.na(echo_latitude) | is.na(echo_longitude)))` / `r nrow(j)` ) are missing either a longitude or latitude (i.e., the x or y coordinate is `NA`). 
 
-For the remaining systems that are "complete" in the sense that they have a spatial centroid, we now seek to understand how accurate that centriod is. Most centroids are derived from the county centroid, address matching on a house number, or a zip code centroid. County- and state-level centroids are of little use as these data offer low to little indication of the true pwsid location. Any method that appears less then 5% of the time is lumped into "other".
+For the remaining systems that are "complete" in the sense that they have a spatial centroid, we now seek to understand how accurate that centroid is. Most centroids are derived from the county centroid, address matching on a house number, or a zip code centroid. County- and state-level centroids are of little use as these data offer low to little indication of the true pwsid location. Any method that appears less then 5% of the time is lumped into "other".
 
 ```{r}
 # joined data that is "complete" in the sense that it has a lng/lat
@@ -252,15 +261,199 @@ jc %>%
   )
 ```
 
-> **RECCOMENDATION**: Results suggest different appraoches to centroid estimation across states and some are more accurate than others. We advise creation of a supplementary table with two columns (`echo_geocode_method` and `valid`) where each row is a unique centroid geocoding method. The `valid` column should be a boolean (`TRUE/FALSE`) that designates if we wish to "trust" and retain this information. A rule of thumb may be if we have reason to believe that the approach is less accurate than the zip code centroid. For methods where `valid == FALSE`, we should then re-estimate centroids as zip code centroids (assuming we have zip codes). 
 
-TODO: We need to recalculate these for the subset of data without a matching TIGRIS place.
+<br>  
+
+### Centroid coverage at PWSIDs with unlabeled spatial data
+
+Centroid accuracy is more important for _unlabeled systems that we do not have explicit boundary polygons for, or that we cannot assign to a TIGRIS proxy polygon_ because it is about this centroid that a water service boundary radius will be estimated. Currently, we match TIGRIS place polygons to ECHO CWSs as a proxy for missing water system boundaries and achieve a `r round((nrow(filter(jc, !is.na(tigris_match_geoid)))/nrow(jc))*100, 2)`% match.
+
+Thus, we now recalculate missingness for the subset of data **without** a matching TIGRIS place using the same two plots and table in the previous section.
 
 ```{r}
-tigris <- 
+# states where we have labeled spatial data
+states_labeled <- unique(wsb_labeled_simp$state) %>% discard(is.na)
+  
+jc %>% 
+  # remove all pwsids that match to a tigris proxy polygon or labeled state
+  filter(is.na(tigris_match_geoid)) %>% 
+  filter(! state_code %in% states_labeled) %>% 
+  # anything that appears less then 5% of the time is lumped into "other"
+  mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
+  group_by(echo_geocode_method) %>% 
+  summarise(n = n()) %>% 
+  ungroup() %>% 
+  mutate(
+    p = n/sum(n),
+    echo_geocode_method = case_when(
+    echo_geocode_method == "ADDRESS MATCHING-HOUSE NUMBER" ~ "address match",
+    echo_geocode_method == "INTERPOLATION-PHOTO"           ~ "interp photo",
+    echo_geocode_method == "County Centroid"               ~ "centroid county",
+    echo_geocode_method == "State Centroid"                ~ "centroid state",
+    echo_geocode_method == "Zip Code Centroid"             ~ "centroid zip",
+    echo_geocode_method == "Other"                         ~ "other",
+    TRUE ~ NA_character_
+  )) %>% 
+  ggplot(aes(fct_reorder(echo_geocode_method, p), p, 
+             fill = echo_geocode_method)) + 
+  geom_col() + 
+  coord_flip() +
+  scale_fill_carto_d() +
+  scale_y_continuous(limits = c(0, 1)) +
+  theme_minimal() +
+  theme(panel.grid.minor = element_blank()) +
+  labs(x = "", y = "Count", title = "ECHO geocoding method") +
+  guides(fill = "none")
+
+# summary proportion of geocoding method by state
+jcs2 <- jc %>% 
+  # remove all pwsids that match to a tigris proxy polygon or labeled state
+  filter(is.na(tigris_match_geoid)) %>% 
+  filter(! state_code %in% states_labeled) %>% 
+  # anything that appears less then 5% of the time is lumped into "other"
+  mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
+  group_by(state_code, echo_geocode_method) %>% 
+  summarise(n = n()) %>% 
+  mutate(p = n / sum(n)) %>% 
+  mutate(echo_geocode_method = case_when(
+    echo_geocode_method == "ADDRESS MATCHING-HOUSE NUMBER" ~ "address match",
+    echo_geocode_method == "INTERPOLATION-PHOTO"           ~ "interp photo",
+    echo_geocode_method == "County Centroid"               ~ "centroid county",
+    echo_geocode_method == "State Centroid"                ~ "centroid state",
+    echo_geocode_method == "Zip Code Centroid"             ~ "centroid zip",
+    echo_geocode_method == "Other"                         ~ "other",
+    TRUE ~ NA_character_
+  )) %>% 
+  ungroup()
 ```
 
 
-## Tabular data missingness: assess missingness for key categories (i.e., population served, system size AKA connection count)
+In the plot below, note that blank states are those for which we have labeled data. States with results only show the PWSIDs without a matching TIGRIS place proxy polygon. 
+
+```{r}
+# plot
+jcs2 %>% 
+  filter(!is.na(state_code)) %>% 
+  ggplot(aes(fct_reorder(echo_geocode_method, p), p, 
+             fill = echo_geocode_method)) + 
+  geom_col() + 
+  coord_flip() +
+  scale_fill_carto_d() +
+  scale_y_continuous(breaks = c(0, 0.5, 1),
+                     labels = c(0, 0.5, 1),
+                     limits = c(0, 1)) +
+  geofacet::facet_geo(~state_code) +
+  labs(x = "", y = "Proportion", 
+       title = "ECHO geocoding method") +
+  guides(fill = "none") +
+  theme_minimal(base_size = 6) +
+  theme(panel.grid.minor = element_blank())
+
+# datatable
+jc %>% 
+  # remove all pwsids that match to a tigris proxy polygon or labeled state
+  filter(is.na(tigris_match_geoid)) %>% 
+  filter(! state_code %in% states_labeled) %>% 
+  # anything that appears less then 5% of the time is lumped into "other"
+  mutate(echo_geocode_method = fct_lump_prop(echo_geocode_method, 0.05)) %>%
+  group_by(state_code, echo_geocode_method) %>% 
+  summarise(n = n()) %>% 
+  mutate(p = n / sum(n)) %>% 
+  ungroup() %>% 
+  arrange(state_code, desc(p)) %>% 
+  DT::datatable(
+    rownames = FALSE, 
+    extensions = 'Buttons', 
+    options = list(
+      dom = 'Bfrtip', 
+      buttons = c('copy', 'csv', 'excel')
+    )
+  )
+```
+
+
+> **RECCOMENDATION**: Results suggest different approaches to centroid estimation across states and some approaches are more accurate than others. Moreover, centroid accuracy is most important for _unlabeled_ data, and for these data, county centroids account for half of centroid locations--improvement is needed in these centroid estimates to better "center" service boundary predictions. We advise creation of a supplementary table with two columns (`echo_geocode_method` and `valid`) where each row is a unique centroid geocoding method. The `valid` column should be a boolean (`TRUE/FALSE`) that designates if we wish to "trust" and retain this information. A rule of thumb may be if we have reason to believe that the approach is less accurate than the zip code centroid. For methods where `valid == FALSE`, we should then re-estimate centroids as zip code centroids (assuming we have zip codes). 
+
+
+<br>  
+
+## Tabular data missingness
+
+"Tabular data" refers to any data attached to PWSIDs (e.g., population served, system size) in various federal databases (e.g., FRS, ECHO, and so on). These tabular data are the independent variables on which we will train statistical and machine learning models to predict water service boundaries for unlabeled data, thus it is critical that they are present across the dataset^[Tabular data missingness may be addressed in a number of imputation methods, but importantly, these methods are not as accurate as a complete dataset to begin with.]. 
+
+`r nrow(filter(j, is.na(population_served_count))) / nrow(j)`% of PWSIDs are missing "population served", and `r round((nrow(filter(j, is.na(service_connections_count))) / nrow(j))*100, 2)`% of PWSIDs are missing "service connection count". We expect these two variables to be important in predicting unlabeled water service boundary radii, hence, we assess their missingness here. As we identify additional features to train models on, we will assess their missingness and update this report. 
+
+
+<br>  
+
+## Population served
+
+`r nrow(filter(j, is.na(population_served_count))) / nrow(j)`% of PWSIDs are missing "population served" thus, we  classify water service areas in terms of size consistent with [EPA guidelines](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Very%20Small%20%C2%A0%20%C2%A0%20%C2%A0%20500,Very%20Large%C2%A0%C2%A0%C2%A0%C2%A0%C2%A0%20%3E100%2C000):  
+ 
+ 
+| EPA classification | Connection count    |
+|--------------------|---------------------|
+| Very Small         |  500 or less        |
+| Small              |  501 - 3,300        |
+| Medium             |  3,301 - 10,000     |
+| Large              |  10,001 - 100,000   |  
+| Very Large         |  >100,000           |
+
+According to the [EPA](https://echo.epa.gov/help/drinking-water-dashboard-help#:~:text=Small%20and%20very%20small%20PWSs%20comprise%20the,source%2C%20such%20as%20a%20drinking%20water%20well.), "small and very small PWSs comprise the approximately 95% of all PWSs, but they serve just 12 percent of all consumers. Small PWSs include both community and non-community water systems. Some examples of non-community systems include office buildings, schools, campgrounds, or highway rest stops with their own water source, such as a drinking water well."
+
+```{r}
+# add water system size to the "incomplete" joined data (2k/55k without lat/lng) joined data
+size_lvls <- c("Very Small", "Small", "Medium", "Large", "Very Large")
+
+j <- j %>% 
+  mutate(
+    size_class = case_when(
+      population_served_count <= 500 ~ "Very Small",
+      population_served_count > 500 & population_served_count <= 3300 ~ "Small",
+      population_served_count > 3300 & population_served_count <= 10000 ~ "Medium",
+      population_served_count > 10000 & population_served_count <= 100000 ~ "Large",
+      population_served_count > 100000 ~ "Very Large"),
+    size_class = factor(size_class, levels = size_lvls)
+  )
+  
+# annotation text and line to highlight NYC
+ann_text <- tibble(
+  label = "New\nYork\nCity",
+  size_class = factor("Very Large", levels = size_lvls)
+)
+
+ann_line <- tibble(
+  xmin = 7e6, xmax = 8.7e6, ymin = 50, ymax = 10,
+  size_class = factor("Very Large", levels = size_lvls)
+)
+
+# plot
+j %>% 
+  ggplot(aes(population_served_count, fill = size_class)) + 
+  geom_histogram(color = "white", lwd = 0.2) +
+  geom_text(
+    data    = ann_text,
+    mapping = aes(x = 6e6, y = 120, label = label)
+  ) +
+  geom_segment(
+    data = ann_line,
+    aes(x = xmin, xend = xmax, y = ymin, yend = ymax),
+    arrow = arrow(length = unit(0.2, "cm"))) +
+  scale_fill_carto_d() +
+  facet_wrap(~size_class, scales = "free", ncol = 2) +
+  labs(x = "Population served count", y = "Count") +
+  theme_minimal() +
+  theme(panel.grid.minor = element_blank()) +
+  guides(fill = "none")
+```
+
+
+<br>  
+
+## System size (i.e., connection count)
+
+
+
+<br>  
 
 # Recommendations and next steps
